Pushing changes to name, mail, descriptions, etc

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Ananyaa Ravi
   location: Location
   social: Around the Web
   credits: Credits
