--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ANANYAA RAVI
+title: Ananyaa Ravi
 email: ananyaar@alumni.cmu.edu
 url: https://surprisingatiger.github.io
 description: "Official website of Ananyaa Ravi, product and tech enthusiast with a passion for Business Intelligence and Data Analysis."
 keywords: "product manager, ananyaa ravi"
 skills: "Product Management - Consulting - Business Intelligence"
 meta_author: Ravi Ananyaa
+favicon:     "favicon.ico"
 
 # Google webmaster tools
 google_verify:
@@ -40,10 +41,10 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 3f2860 #90C5A9
+  primary-rgb: "239,109,59" #"255,89,146"
+  secondary: 90C5A9 #EF6D3B
+  secondary-dark: FA8B60 #7A9A95
 
 # Footer settings
 footer:
